# PropertyBrowser4

./: .gitignore
src/: CMakeLists.txt  export.h  interfacetool.h  ipropertyinfomap.h  manageobject.cpp  manageobject.h  manageobject.ui  project_pch.h  propertybrowser3.cpp  propertybrowser3.h  propertybrowser3.ui  propertybrowser3_p.cpp  propertybrowser3_p.h  propertyinfo.h  settingsform.cpp  settingsform.h  settingsform.ui
src/Decorator/: idecoratorbase.cpp
src/Editors/: abstractpropertyitem.cpp  abstractpropertyitem.h  editorproperties.h
src/Editors/BoolPropertyItem/: boolpropertyitem.cpp  boolpropertyitem.h
src/Editors/ByteArrayPropertyItem/: bytearrayeditor.h  bytearrayeditor.ui  bytearraypropertyitem.cpp  bytearraypropertyitem.h  commands.cpp  qhexedit.cpp
src/Editors/ColorPropertyItem/: colorpropertyitem.cpp  colorpropertyitem.h
src/Editors/DatePropertyItem/: datepropertyitem.cpp  datepropertyitem.h
src/Editors/DateTimePropertyItem/: datetimepropertyitem.cpp  datetimepropertyitem.h
src/Editors/DefaultPropertyItem/: defaultpropertyitem.cpp  defaultpropertyitem.h
src/Editors/DirPropertyItem/: dirpropertyitem.h  opendirectorywidget.ui
src/Editors/DoublePropertyItem/: doublepropertyitem.cpp  doublepropertyitem.h
src/Editors/FontPropertyItem/: fontpropertyitem.cpp  fontpropertyitem.h
src/Editors/IntPropertyItem/: defaultinteditor.cpp  enuminteditor.cpp  flagsinteditor.cpp  flagsinteditor.h  iinteditor.cpp  iinteditor.h  intpropertyitem.cpp  intpropertyitem.h
src/Editors/PixmapPropertyItem/: PixmapPropertyItem.h  photouploader.cpp  photouploader.ui
src/Editors/PixmapPropertyItem/ResizableView/: resizableview.cpp  resizableview.h
src/Editors/RectPropertyItem/: rectpropertyitem.cpp  rectpropertyitem.h
src/Editors/SizePropertyItem/: sizepropertyitem.cpp  sizepropertyitem.h
src/Editors/StringListPropertyitem/: fileitemdelegate.h  loadfileswidget.cpp  stringlisteditor.ui  stringlistpropertyitem.h
src/Editors/StringPropertyItem/: OpenFileWidget.h  openfilewidget.cpp  stringpropertyitem.cpp  stringpropertyitem.h
src/Editors/TimePropertyItem/: timepropertyitem.h
src/Editors/UrlPropertyItem/: urlpropertyitem.h
src/Editors/VariantListPropertyItem/: VariantListPropertyItem.cpp  VariantListPropertyItem.h
src/Editors/VariantMapPropertyItem/: VariantMapPropertyItem.cpp  VariantMapPropertyItem.h
src/PropertyBrowser/: CMakeLists.txt  Propertybrowser_images.qrc  interfacetool.cpp  interfacetool.h  ipropertyinfomap.h  manageobject.cpp  manageobject.h  manageobject.ui  propertybrowser.cpp  propertybrowser.h  propertybrowser.ui  propertybrowser_p.cpp  propertybrowser_p.h  settingsform.cpp  settingsform.h  settingsform.ui
src/PropertyBrowser/Decorator/: decoratorfactory.cpp  decoratorfactory.h  idecoratorbase.h
src/PropertyBrowser/priv/: changepropertycommand.cpp  changepropertycommand.h  configuredialog.cpp  itemdelegate.cpp  itemdelegate.h  mytreewidget.cpp  mytreewidget.h  plugincollection.cpp  propertybrowser3plugin.cpp
src/PropertyBrowser/priv/PropertyBrowser4/: propertybrowser.h
src/PropertyBrowser/translate/: PropertyBrowser3_en.qm  PropertyBrowser3_es.qm  PropertyBrowser3_ru.ts  PropertyBrowser3_uk.qm
src/PropertyBrowserCore/: CMakeLists.txt  EditorFactory.cpp  EditorFactory.h  abstractpropertyitem.cpp  abstractpropertyitem.h  interfacetool.cpp  interfacetool.h  ipropertyinfomap.h  project_pch.h
src/PropertyBrowserCore/Decorator/: decoratorfactory.h  idecoratorbase.h
src/PropertyBrowserEditors/: CMakeLists.txt  PropertyBrowserEditors.cpp  PropertyBrowserEditors.h  project_pch.h
src/PropertyBrowserEditors/BoolPropertyItem/: boolpropertyitem.h
src/PropertyBrowserEditors/ByteArrayPropertyItem/: bytearrayeditor.cpp  bytearrayeditor.ui  bytearraypropertyitem.cpp  bytearraypropertyitem.h  chunks.cpp  chunks.h  commands.h  qhexedit.h
src/PropertyBrowserEditors/ColorPropertyItem/: colorpropertyitem.h
src/PropertyBrowserEditors/DatePropertyItem/: datepropertyitem.h
src/PropertyBrowserEditors/DateTimePropertyItem/: datetimepropertyitem.h
src/PropertyBrowserEditors/DefaultPropertyItem/: defaultpropertyitem.cpp  defaultpropertyitem.h
src/PropertyBrowserEditors/DirPropertyItem/: dirpropertyitem.cpp  opendirectorywidget.cpp  opendirectorywidget.h
src/PropertyBrowserEditors/DoublePropertyItem/: doublepropertyitem.cpp  doublepropertyitem.h
src/PropertyBrowserEditors/FontPropertyItem/: fontpropertyitem.h
src/PropertyBrowserEditors/IntPropertyItem/: defaultinteditor.cpp  defaultinteditor.h  enuminteditor.cpp  enuminteditor.h  flagsinteditor.cpp  flagsinteditor.h  intpropertyitem.cpp  intpropertyitem.h
src/PropertyBrowserEditors/PixmapPropertyItem/: PixmapPropertyItem.cpp  PixmapPropertyItem.h  photouploader.cpp  photouploader.h  photouploader.ui
src/PropertyBrowserEditors/RectPropertyItem/: rectpropertyitem.cpp  rectpropertyitem.h
src/PropertyBrowserEditors/SizePropertyItem/: sizepropertyitem.cpp  sizepropertyitem.h
src/PropertyBrowserEditors/StringListPropertyitem/: fileitemdelegate.cpp  filelistitem.cpp  filelistitem.h  filelistitem.ui  loadfileswidget.h  loadfileswidget.ui  stringlisteditor.cpp  stringlisteditor.h  stringlistpropertyitem.cpp  stringlistpropertyitem.h
src/PropertyBrowserEditors/StringPropertyItem/: OpenFileWidget.h  openfilewidget.ui  stringpropertyitem.cpp  stringpropertyitem.h
src/PropertyBrowserEditors/TimePropertyItem/: timepropertyitem.cpp  timepropertyitem.h
src/PropertyBrowserEditors/UrlPropertyItem/: urlpropertyitem.cpp  urlpropertyitem.h
src/PropertyBrowserEditors/VariantListPropertyItem/: VariantListPropertyItem.cpp  VariantListPropertyItem.h
src/PropertyBrowserEditors/VariantMapPropertyItem/: VariantMapPropertyItem.cpp  VariantMapPropertyItem.h
src/priv/: changepropertycommand.cpp  changepropertycommand.h  configuredialog.h  configuredialog.ui  itemdelegate.cpp  mytreewidget.cpp  plugincollection.h  propertybrowser3plugin.h
src/priv/propertybrowser3/: propertybrowser3.h
src/translate/: PropertyBrowser3_en.ts  PropertyBrowser3_es.ts  PropertyBrowser3_ru.qm  PropertyBrowser3_uk.ts
(+1 files in other folders)
